Home page add new

--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@
 /* Solutions Section */
 .solutions-section {
 	width: 100%;
-	background: none;
+	background: #0a0f1e;
 	padding: 32px 0 32px 0;
 	display: flex;
 	flex-direction: column;
@@ -671,7 +671,7 @@ html, body, #root {
   color:#dbeee6; 
   padding:24px 32px; 
   border-radius:14px; 
-  min-width:280px; 
+  /* min-width:280px;  */
   text-align:center; 
   box-shadow: 0 18px 46px rgba(2,6,23,0.7); 
   font-size:16px;
@@ -2114,12 +2114,13 @@ html, body, #root {
 } */
 
 .cta.primary {
-  background:#8B5CF6;
+  /* background:#8B5CF6; */
+      background: linear-gradient(90deg, #9a84ff 0%, #d4af37 100%);
   color: var(--primary-foreground);
   border: none;
   padding: 12px 22px;
   border-radius: 8px;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -2136,7 +2137,7 @@ html, body, #root {
   border: 1px solid #bfaaff;
   padding: 12px 22px;
   border-radius: 8px;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 14px;
   cursor: pointer;
   transition: all 0.3s ease;
