Home page Graph add

--- a/src/components/Analytic.css
+++ b/src/components/Analytic.css
@@ -1,7 +1,7 @@
 .adash2{position:relative;width:100%;padding:24px 0;  background-color:linear-gradient( rgba(139,92,246,0.2) 0%, rgba(246, 202, 92, 0.05) 80%, rgba(139,92,246,0.05) 80%)}
 .adash2-grid{display:grid;grid-template-columns:1.4fr 1.4fr;gap:28px;align-items:start}
 .adash2-left{padding:200px 8px 10px 18px;
-  background: linear-gradient( rgba(139,92,246,0.2) 0%, rgba(246, 202, 92, 0.05) 80%, rgba(139,92,246,0.05) 80%)
+  /* background: linear-gradient( rgba(139,92,246,0.2) 0%, rgba(246, 202, 92, 0.05) 80%, rgba(139,92,246,0.05) 80%) */
 }
 .ai-pill{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:999px;background:linear-gradient(90deg,#2a2144 0%,#2a2144 100%);border:1px solid rgba(139,92,246,.35);color:#be9d3b;font-size:12px; text-align: center; margin-bottom: 20px;}
 .adash2-title{font-size:16px;line-height:1.2;margin:14px 0 10px;color:#e9e7ff; font-weight:400; margin-bottom: 20px;}
@@ -17,7 +17,8 @@
 .adash2-list .pb{color:#8b94aa;font-size:14px;margin-top:2px}
 .ai-actions{display:flex;gap:12px;margin-top:8px}
 
-.adash2-right{padding:30px;	 background: linear-gradient( rgba(139,92,246,0.2) 0%, rgba(246, 202, 92, 0.05) 80%, rgba(139,92,246,0.05) 80%);
+.adash2-right{padding:30px;	 
+  /* background: linear-gradient( rgba(139,92,246,0.2) 0%, rgba(246, 202, 92, 0.05) 80%, rgba(139,92,246,0.05) 80%); */
     border: 0px solid  rgba(139,92,246,0.12);
       /* background: radial-gradient(circle, rgba(246, 184, 92, 0.2) 0%, rgba(246, 210, 92, 0.1) 60%, rgba(246, 202, 92, 0.05) 80%); */
     
