--- a/src/components/Analytic.css
+++ b/src/components/Analytic.css
@@ -14,8 +14,8 @@
   align-items: start
 }
 
-.adash2-left {
-  padding: 200px 8px 10px 18px;
+.adash2-left{
+  padding:200px 8px 10px 18px;
   background:
     radial-gradient(55% 55% at 28% 30%, rgba(139, 92, 246, 0.25) 0%, rgba(139, 92, 246, 0.10) 40%, rgba(13, 18, 32, 0) 70%),
     radial-gradient(70% 70% at 35% 10%, rgba(0, 0, 0, 0.25) 0%, rgba(0,0,0,0.0) 60%);
@@ -99,9 +99,9 @@
   margin-top: 8px
 }
 
-.adash2-right {
-  padding: 30px;
-  border: 0px solid rgba(139, 92, 246, 0.12);
+.adash2-right{
+  padding:30px;
+  border: 0px solid rgba(139,92,246,0.12);
   background:
     radial-gradient(70% 70% at 65% 40%, rgba(139, 92, 246, 0.14) 20%, rgba(139, 92, 246, 0.05) 45%, rgba(13, 18, 32, 0) 70%),
     radial-gradient(60% 60% at 85% 65%, rgba(212, 175, 55, 0.14) 20%, rgba(212, 175, 55, 0.05) 40%, rgba(13, 18, 32, 0) 70%);
@@ -114,7 +114,7 @@
   padding-right: 20px
 }
 
-.kpi-card {
+.kpi-card{
   background: linear-gradient(180deg, rgba(26, 29, 55, .92) 0%, rgba(19, 22, 40, .92) 100%);
   backdrop-filter: blur(6px);
   border: 1px solid rgba(139, 92, 246, .18);
